--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,15 @@
 {
+  "plugins": [
+    [
+      "module-resolver",
+      {
+        "root": ["./"],
+        "alias": {
+          "@app": "./"
+        }
+      }
+    ]
+  ],
   "presets": [
     "next/babel",
     "@zeit/next-typescript/babel"
