--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/next": "^7.0.1",
     "@types/react": "^16.4.16",
     "@types/react-redux": "^6.0.9",
+    "babel-plugin-module-resolver": "^3.1.1",
     "postcss": "^7.0.5",
     "postcss-nesting": "^7.0.0",
     "postcss-normalize": "^7.0.1",
