--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.1.0"
+    "redux-symbiote": "^2.6.0",
+    "redux-thunk": "^2.1.0",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "@solid-soda/tslint-config": "^2.1.0",
@@ -24,6 +26,7 @@
     "@types/next": "^7.0.1",
     "@types/react": "^16.4.16",
     "@types/react-redux": "^6.0.9",
+    "@types/redux-thunk": "^2.1.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "postcss": "^7.0.5",
     "postcss-nesting": "^7.0.0",
