--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint:code": "tslint -p tsconfig.json -c tslint.json",
+    "lint:style": "stylelint './**/*.css'"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
@@ -34,6 +36,7 @@
     "postcss-preset-env": "^6.0.10",
     "stylelint": "^9.6.0",
     "stylelint-config-recommended": "^2.1.0",
-    "tslint": "^5.11.0"
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.1"
   }
 }
