--- a/.babelrc
+++ b/.babelrc
@@ -10,8 +10,21 @@
       }
     ]
   ],
-  "presets": [
-    "next/babel",
-    "@zeit/next-typescript/babel"
-  ]
+  "env": {
+    "development": {
+      "presets": [
+        "next/babel",
+        "@zeit/next-typescript/babel"
+      ]
+    },
+    "production": {
+      "presets": [
+        "next/babel",
+        "@zeit/next-typescript/babel"
+      ]
+    },
+    "test": {
+      "presets": ["@babel/preset-env", "@babel/preset-react", "@babel/preset-typescript"]
+    }
+  }
 }
