--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint:code": "tslint -p tsconfig.json -c tslint.json",
-    "lint:style": "stylelint './**/*.css'"
+    "lint:style": "stylelint './**/*.css'",
+    "test": "jest"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
@@ -23,13 +24,24 @@
     "reselect": "^4.0.0"
   },
   "devDependencies": {
-    "@solid-soda/tslint-config": "^2.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
     "@types/classnames": "^2.2.6",
+    "@types/enzyme": "^3.1.14",
+    "@types/jest": "^23.3.4",
     "@types/next": "^7.0.1",
     "@types/react": "^16.4.16",
     "@types/react-redux": "^6.0.9",
     "@types/redux-thunk": "^2.1.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme-to-json": "^3.3.4",
+    "jest": "^23.6.0",
+    "jest-enzyme": "^7.0.0",
     "postcss": "^7.0.5",
     "postcss-nesting": "^7.0.0",
     "postcss-normalize": "^7.0.1",
@@ -37,6 +49,7 @@
     "stylelint": "^9.6.0",
     "stylelint-config-recommended": "^2.1.0",
     "tslint": "^5.11.0",
+    "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.1.1"
   }
 }
