--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,11 +25,38 @@ jobs:
           name: Link Styles
           command: yarn lint:style
 
+  test:
+    docker:
+      - image: circleci/node:8.11.1
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - js-dependencies-{{ checksum "yarn.lock" }}
+      - run:
+          name: Install Dependencies
+          command: yarn
+      - save_cache:
+          key: js-dependencies-{{ checksum "yarn.lock" }}
+          paths:
+            - ./node_modules
+      - run:
+          name: Unit Test
+          command: yarn test
+
 workflows:
   version: 2
   check-pr:
     jobs:
       - lint:
+          filters:
+            branches:
+              ignore: 
+                - master
+      - test:
           filters:
             branches:
               ignore: 
