--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
+    "antd": "^3.10.1",
     "classnames": "^2.2.6",
     "next": "^7.0.1",
+    "normalize.css": "^8.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-final-form": "^3.6.7",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
@@ -42,6 +45,7 @@
     "enzyme-to-json": "^3.3.4",
     "jest": "^23.6.0",
     "jest-enzyme": "^7.0.0",
+    "mini-css-extract-plugin": "^0.4.4",
     "postcss": "^7.0.5",
     "postcss-nesting": "^7.0.0",
     "postcss-normalize": "^7.0.1",
