--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "@zeit/next-typescript": "^1.1.1",
     "antd": "^3.10.1",
     "classnames": "^2.2.6",
+    "final-form": "^4.10.0",
     "next": "^7.0.1",
     "normalize.css": "^8.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-final-form": "^3.6.7",
     "react-redux": "^5.0.1",
+    "recompose": "^0.30.0",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-symbiote": "^2.6.0",
     "redux-thunk": "^2.1.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "yup": "^0.26.6"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.1.0",
