--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "antd": "^3.10.1",
+    "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "final-form": "^4.10.0",
     "next": "^7.0.1",
