--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react": "^16.4.16",
     "@types/react-redux": "^6.0.9",
     "@types/redux-thunk": "^2.1.0",
+    "@types/yup": "^0.26.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
