--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-css": "git+ssh://git@github.com/breadhead/next-css.git",
     "@zeit/next-typescript": "^1.1.1",
     "antd": "^3.10.1",
     "axios": "^0.18.0",
