--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "oncohelp-web",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint:code": "tslint -p tsconfig.json -c tslint.json",
@@ -15,6 +15,8 @@
     "antd": "^3.10.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.4",
     "final-form": "^4.10.0",
     "next": "^7.0.1",
     "normalize.css": "^8.0.0",
