--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@zeit/next-css": "git+ssh://git@github.com/breadhead/next-css.git",
     "@zeit/next-typescript": "^1.1.1",
     "antd": "^3.10.1",
+    "args-parser": "^1.1.0",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
