--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "final-form": "^4.10.0",
+    "js-cookie": "^2.2.0",
     "nanoid": "^1.3.1",
     "next": "^7.0.1",
     "next-css": "git+ssh://git@github.com/breadhead/next-css.git",
