--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/classnames": "^2.2.6",
     "@types/enzyme": "^3.1.14",
     "@types/jest": "^23.3.4",
+    "@types/js-cookie": "^2.2.0",
     "@types/next": "^7.0.1",
     "@types/react": "^16.4.16",
     "@types/react-redux": "^6.0.9",
