--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.4",
     "final-form": "^4.10.0",
     "js-cookie": "^2.2.0",
+    "lodash": "^4.17.11",
     "nanoid": "^1.3.1",
     "next": "^7.0.1",
     "next-css": "git+ssh://git@github.com/breadhead/next-css.git",
@@ -44,6 +45,7 @@
     "@types/enzyme": "^3.1.14",
     "@types/jest": "^23.3.4",
     "@types/js-cookie": "^2.2.0",
+    "@types/lodash": "^4.14.117",
     "@types/next": "^7.0.1",
     "@types/react": "^16.4.16",
     "@types/react-redux": "^6.0.9",
