--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,12 @@
 {
-  "extends": "stylelint-config-recommended"
+  "extends": "stylelint-config-recommended",
+  "plugins": [
+		"stylelint-order"
+	],
+	"rules": {
+		"order/order": [
+			"custom-properties",
+			"declarations"
+		]
+	}
 }
