--- a/package.json
+++ b/package.json
@@ -65,8 +65,9 @@
     "postcss-nesting": "^7.0.0",
     "postcss-normalize": "^7.0.1",
     "postcss-preset-env": "^6.0.10",
-    "stylelint": "^9.6.0",
+    "stylelint": "^9.7.1",
     "stylelint-config-recommended": "^2.1.0",
+    "stylelint-order": "^1.0.0",
     "tslint": "^5.11.0",
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.1.1"
