--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint:code": "tslint -p tsconfig.json -c tslint.json",
-    "lint:style": "stylelint './**/*.css'",
+    "lint:style": "stylelint './**/*.css' --fix",
     "test": "jest"
   },
   "dependencies": {
@@ -66,6 +66,7 @@
     "postcss-normalize": "^7.0.1",
     "postcss-preset-env": "^6.0.10",
     "stylelint": "^9.7.1",
+    "stylelint-config-recess-order": "^2.0.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-order": "^1.0.0",
     "tslint": "^5.11.0",
