--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "final-form": "^4.10.0",
-    "next": "^7.0.2",
-    "normalize.css": "^8.0.0",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
     "nanoid": "^1.3.1",
-    "next-css": "git+ssh://git@github.com/breadhead/next-css.git",
+    "next": "^7.0.2",
+    "next-css-unpluggable": "^2.0.0",
     "next-routes": "^1.4.2",
+    "normalize.css": "^8.0.0",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-fileupload-progress": "^0.4.1",
     "react-final-form": "^3.6.7",
     "react-redux": "^5.1.0",
