--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "next start",
+    "lint": "yarn lint:code && yarn lint:style",
     "lint:code": "tslint -p tsconfig.json -c tslint.json",
     "lint:style": "stylelint './**/*.css' --fix",
     "test": "jest"
