--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@zeit/next-less": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "antd": "^3.10.3",
     "args-parser": "^1.1.0",
@@ -20,9 +21,12 @@
     "express": "^4.16.4",
     "final-form": "^4.10.0",
     "js-cookie": "^2.2.0",
+    "less": "^3.8.1",
+    "less-vars-to-js": "^1.3.0",
     "lodash": "^4.17.11",
     "nanoid": "^1.3.1",
     "next": "^7.0.2",
+    "next-compose-plugins": "^2.1.1",
     "next-css-unpluggable": "^2.0.0",
     "next-routes": "^1.4.2",
     "normalize.css": "^8.0.0",
