--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@breadhead/thunk-error": "^1.0.2",
     "@zeit/next-typescript": "^1.1.1",
     "antd": "^3.10.1",
     "args-parser": "^1.1.0",
