Add pushong image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,28 @@ jobs:
           name: Unit Test
           command: yarn test
 
+  push:
+    docker:
+      - image: docker:17.05.0-ce-git
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: Setup Env
+          command: |
+            echo 'export IMAGE_TAG=${VERSION:-latest}' >> $BASH_ENV
+            echo 'export IMAGE_NAME=oncohelp-web' >> $BASH_ENV
+      - run:
+          name: Build and push Docker image
+          command: |
+            source $BASH_ENV
+            docker build -t breadheadhub/$IMAGE_NAME:$IMAGE_TAG .
+            docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
+            docker push breadheadhub/$IMAGE_NAME:$IMAGE_TAG
+
 workflows:
   version: 2
   check-pr:
@@ -60,5 +82,12 @@ workflows:
           filters:
             branches:
               ignore: 
+                - master
+  deploy-dev:
+    jobs:
+      - push:
+          filters:
+            branches:
+              only: 
                 - master
 
