--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@breadhead/thunk-error": "^1.0.2",
+    "@types/react-modal": "^3.6.0",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "antd": "^3.10.3",
@@ -35,6 +36,7 @@
     "react-dom": "^16.6.0",
     "react-fileupload-progress": "^0.4.1",
     "react-final-form": "^3.6.7",
+    "react-modal": "^3.6.1",
     "react-redux": "^5.1.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
