--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^3.10.3",
     "args-parser": "^1.1.0",
     "axios": "^0.18.0",
+    "body-scroll-lock": "^2.6.1",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
