--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   },
   "dependencies": {
     "@breadhead/thunk-error": "^1.0.2",
+    "@breadhead/with-scroll-lock": "^1.0.0",
     "@types/react-modal": "^3.6.0",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "antd": "^3.10.3",
     "args-parser": "^1.1.0",
     "axios": "^0.18.0",
-    "body-scroll-lock": "^2.6.1",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
