--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "final-form": "^4.10.0",
+    "http-status-codes": "^1.3.0",
     "js-cookie": "^2.2.0",
     "less": "^3.8.1",
     "less-vars-to-js": "^1.3.0",
