--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@breadhead/thunk-error": "^1.0.2",
     "@breadhead/with-scroll-lock": "^1.0.0",
-    "@types/react-modal": "^3.6.0",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "antd": "^3.10.3",
@@ -58,7 +57,9 @@
     "@types/lodash": "^4.14.117",
     "@types/next": "^7.0.1",
     "@types/react": "^16.4.16",
+    "@types/react-modal": "^3.6.0",
     "@types/react-redux": "^6.0.9",
+    "@types/recompose": "^0.30.0",
     "@types/redux-thunk": "^2.1.0",
     "@types/yup": "^0.26.0",
     "babel-core": "7.0.0-bridge.0",
