--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@commitlint/cli": "^7.2.1",
     "@types/classnames": "^2.2.6",
     "@types/enzyme": "^3.1.14",
     "@types/jest": "^23.3.4",
@@ -65,9 +66,11 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
+    "cz-customizable": "^5.3.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "enzyme-to-json": "^3.3.4",
+    "husky": "^1.2.0",
     "jest": "^23.6.0",
     "jest-enzyme": "^7.0.0",
     "postcss": "^7.0.5",
