--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,7 +102,8 @@ jobs:
             sudo docker pull breadheadhub/oncohelp-web &&
             sudo docker logout &&
             sudo docker-compose down &&
-            sudo docker-compose up -d"
+            sudo docker-compose up -d &&
+            sudo docker image prune"
 
 workflows:
   version: 2
