--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-symbiote": "^2.6.0",
     "redux-thunk": "^2.1.0",
+    "redux-windowsize": "^1.3.1",
     "reselect": "^4.0.0",
     "tsoption": "^0.7.0",
     "yup": "^0.26.6"
