--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/react": "^16.4.16",
     "@types/react-modal": "^3.6.0",
     "@types/react-redux": "^6.0.9",
+    "@types/react-transition-group": "^2.0.14",
     "@types/recompose": "^0.30.0",
     "@types/redux-thunk": "^2.1.0",
     "@types/yup": "^0.26.0",
@@ -82,6 +83,7 @@
     "postcss-normalize": "^7.0.1",
     "postcss-preset-env": "^6.3.0",
     "prettier": "^1.15.3",
+    "react-transition-group": "^2.5.1",
     "stylelint": "^9.7.1",
     "stylelint-config-recess-order": "^2.0.0",
     "stylelint-config-recommended": "^2.1.0",
