fix(global): pass meta from react final form to getShouldVAlidate

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "pm2 restart pm2.json",
-    "lint": "yarn lint:code && yarn lint:style && yarn types",
+    "lint": "yarn lint:code && yarn lint:style",
     "lint:code": "tslint -p tsconfig.json -c tslint.json",
     "lint:style": "stylelint './**/*.css' --fix",
     "types": "tsc",
