--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/jest": "^23.3.4",
     "@types/js-cookie": "^2.2.0",
     "@types/lodash": "^4.14.117",
+    "@types/nanoid": "^1.2.0",
     "@types/next": "^7.0.1",
     "@types/react": "^16.4.16",
     "@types/react-modal": "^3.6.0",
