--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "pm2 restart pm2.json",
     "lint": "yarn lint:code && yarn lint:style",
-    "lint:code": "tslint --fix -p tsconfig.json -c tslint.json",
+    "lint:code": "tslint -p tsconfig.json -c tslint.json",
     "lint:style": "stylelint './**/*.css' --fix",
     "types": "tsc",
     "pretty": "prettier --write \"{,!(.next|out)/**/}*.{ts,tsx,js}\"",
