--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-css-unpluggable": "^2.1.0",
     "next-routes": "^1.4.2",
     "normalize.css": "^8.0.0",
+    "plural-ru": "^2.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-final-form": "^3.6.7",
