--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "target": "esnext",
     "paths": {
       "@app/*": ["*"],
-      "redux-windowsize": ["src/types/reduxWindowsize.d.ts"]
+      "redux-windowsize": ["src/types/reduxWindowsize.d.ts"],
+      "plural-ru": ["src/types/plural-ru.d.ts"]
     }
   }
 }
