--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@breadhead/thunk-error": "^1.0.2",
     "@breadhead/with-scroll-lock": "^1.0.0",
+    "@types/object-hash": "^1.2.0",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "antd": "^3.10.3",
@@ -35,6 +36,7 @@
     "next-css-unpluggable": "^2.1.0",
     "next-routes": "^1.4.2",
     "normalize.css": "^8.0.0",
+    "object-hash": "^1.3.1",
     "plural-ru": "^2.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
