--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-redux": "^5.1.0",
     "react-scroll": "^1.7.10",
     "react-transition-group": "^2.5.1",
+    "react-yandex-maps": "^3.0.2",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.2",
