ci(global): add build on tag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,6 +131,8 @@ workflows:
             branches:
               only: 
                 - master
+            tags:
+              only: /.*/
       - dev:
           filters:
             branches:
