--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,4 +143,6 @@ workflows:
       - push:
           filters:
             tags:
-              only: /.*/
+              only: /^v.*/
+            branches:
+              ignore: /.*/
