ci(global): fix typo in circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,7 +117,7 @@ jobs:
           name: Deploy Over SSH
           command: |
             source $BASH_ENV
-            ssh SSH_PROD_USER@$SSH_PROD_HOST "cd /var/www/oncohelp &&
+            ssh $SSH_PROD_USER@$SSH_PROD_HOST "cd /var/www/oncohelp &&
             sudo docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD" &&
             sudo docker pull breadheadhub/oncohelp-web:$IMAGE_TAG &&
             sudo docker logout &&
