--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "less": "^3.8.1",
     "less-vars-to-js": "^1.3.0",
     "lodash": "^4.17.11",
+    "moment": "^2.23.0",
     "nanoid": "^2.0.0",
     "next": "^7.0.2",
     "next-compose-plugins": "^2.1.1",
