--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
+    "dayjs": "^1.8.0",
     "express": "^4.16.4",
     "final-form": "^4.10.0",
     "http-status-codes": "^1.3.0",
@@ -30,7 +31,6 @@
     "less": "^3.8.1",
     "less-vars-to-js": "^1.3.0",
     "lodash": "^4.17.11",
-    "moment": "^2.23.0",
     "nanoid": "^2.0.0",
     "next": "^7.0.2",
     "next-compose-plugins": "^2.1.1",
