--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@breadhead/phone-input-ru": "^1.0.3",
     "@breadhead/thunk-error": "^1.0.3",
     "@breadhead/with-scroll-lock": "^1.0.0",
     "@types/object-hash": "^1.2.0",
