--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,28 @@ jobs:
           name: Check Typings
           command: yarn types
 
+  cicular:
+    docker:
+      - image: circleci/node:8.11.1
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - js-dependencies-{{ checksum "yarn.lock" }}
+      - run:
+          name: Install Dependencies
+          command: yarn
+      - save_cache:
+          key: js-dependencies-{{ checksum "yarn.lock" }}
+          paths:
+            - ./node_modules
+      - run:
+          name: Check Circular Dependency
+          command: yarn circular
+
   push:
     docker:
       - image: docker:17.05.0-ce-git
@@ -140,6 +162,11 @@ workflows:
               ignore: 
                 - master
       - types:
+          filters:
+            branches:
+              ignore: 
+                - master
+      - cicular:
           filters:
             branches:
               ignore: 
