--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:style": "stylelint './**/*.css'",
     "types": "tsc",
     "pretty": "prettier --write \"{,!(.next|out)/**/}*.{ts,tsx,js}\"",
-    "test": "jest"
+    "test": "jest",
+    "circular": "madge --circular --extensions ts ./"
   },
   "dependencies": {
     "@breadhead/phone-input-ru": "^1.0.3",
@@ -62,7 +63,8 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
-    "@commitlint/cli": "^7.2.1",
+    "@commitlint/cli": "^7.3.2",
+    "@commitlint/config-conventional": "^7.3.1",
     "@solid-soda/tslint-config": "^2.5.3",
     "@types/classnames": "^2.2.6",
     "@types/enzyme": "^3.1.14",
@@ -82,6 +84,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
+    "cz-conventional-changelog": "^2.1.0",
     "cz-customizable": "^5.3.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
@@ -90,6 +93,7 @@
     "jest": "^23.6.0",
     "jest-enzyme": "^7.0.0",
     "lint-staged": "^8.1.0",
+    "madge": "^3.4.3",
     "postcss": "^7.0.5",
     "postcss-custom-media": "^7.0.7",
     "postcss-nesting": "^7.0.0",
@@ -105,22 +109,31 @@
   },
   "config": {
     "commitizen": {
-      "path": "node_modules/cz-customizable"
-    },
-    "cz-customizable": {
-      "config": "git/commitizen.js"
+      "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS -g './git/commitlint.js'"
+      "pre-commit": "lint-staged && yarn types && yarn test",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
       "yarn pretty",
+      "yarn lint",
       "git add"
     ]
+  },
+  "prettier": {
+    "tabWidth": 2,
+    "semi": false,
+    "trailingComma": "all",
+    "singleQuote": true
   }
 }
