chore: extract ignore-not-found-export-plugin
extract ignore-not-found-export-plugin to separate npm module

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "enzyme-adapter-react-16": "^1.6.0",
     "enzyme-to-json": "^3.3.4",
     "husky": "^1.2.0",
+    "ignore-not-found-export-plugin": "^1.0.1",
     "jest": "^23.6.0",
     "jest-enzyme": "^7.0.0",
     "lint-staged": "^8.1.0",
