--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "circular": "madge --circular --extensions ts ./"
   },
   "dependencies": {
+    "@breadhead/form-saver": "^1.0.2",
     "@breadhead/thunk-error": "^1.0.3",
     "@breadhead/with-scroll-lock": "^1.0.0",
     "@types/object-hash": "^1.2.0",
