--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "circular": "madge --circular --extensions ts ./"
   },
   "dependencies": {
-    "@breadhead/form-saver": "^1.0.2",
+    "@breadhead/form-saver": "^1.0.3",
     "@breadhead/thunk-error": "^1.0.3",
     "@breadhead/with-scroll-lock": "^1.0.0",
     "@types/object-hash": "^1.2.0",
@@ -34,6 +34,7 @@
     "less-vars-to-js": "^1.3.0",
     "lodash": "^4.17.11",
     "nanoid": "^2.0.0",
+    "nanomerge": "^0.2.0",
     "next": "^7.0.2",
     "next-compose-plugins": "^2.1.1",
     "next-css-unpluggable": "^2.1.0",
@@ -55,6 +56,7 @@
     "redux-thunk": "^2.1.0",
     "redux-windowsize": "^1.3.1",
     "reselect": "^4.0.0",
+    "store2": "^2.7.1",
     "tsoption": "^0.7.0",
     "utility-types": "^2.1.0",
     "yup": "^0.26.6"
