--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "yarn lint:code && yarn lint:style",
     "lint:code": "tslint -p tsconfig.json -c tslint.json",
     "lint:style": "stylelint './**/*.css'",
+    "fix:style": "stylelint './**/*.css' --fix",
     "types": "tsc",
     "pretty": "prettier --write \"{,!(.next|out)/**/}*.{ts,tsx,js}\"",
     "test": "jest",
@@ -98,6 +99,7 @@
     "madge": "^3.4.3",
     "postcss": "^7.0.5",
     "postcss-custom-media": "^7.0.7",
+    "postcss-inherit": "^4.1.0",
     "postcss-nesting": "^7.0.0",
     "postcss-normalize": "^7.0.1",
     "postcss-preset-env": "^6.3.0",
