--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -222,4 +222,4 @@ workflows:
             branches:
               ignore: /.*/
           requires:
-            - push
+            - push_stable
