refactor(ui): use new button in some places

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "target": "esnext",
     "paths": {
       "@app/*": ["*"],
+      "@front/*": ["src/*"],
       "redux-windowsize": ["src/types/reduxWindowsize.d.ts"],
       "plural-ru": ["src/types/plural-ru.d.ts"]
     }
