--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,8 @@
       {
         "root": ["./"],
         "alias": {
-          "@app": "./"
+          "@app": "./",
+          "@front": "./src"
         }
       }
     ]
