--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "final-form": "^4.10.0",
     "http-status-codes": "^1.3.0",
     "ignore-not-found-export-plugin": "^1.0.1",
+    "imagemin-svgo": "^7.0.0",
     "js-cookie": "^2.2.0",
     "less": "^3.8.1",
     "less-vars-to-js": "^1.3.0",
@@ -41,6 +42,7 @@
     "next": "^7.0.2",
     "next-compose-plugins": "^2.1.1",
     "next-css-unpluggable": "^2.1.8",
+    "next-optimized-images": "^2.3.3",
     "next-routes": "^1.4.2",
     "normalize.css": "^8.0.0",
     "object-hash": "^1.3.1",
@@ -60,6 +62,7 @@
     "redux-windowsize": "^1.3.1",
     "reselect": "^4.0.0",
     "store2": "^2.7.1",
+    "svg-sprite-loader": "^4.1.3",
     "tsoption": "^0.7.0",
     "utility-types": "^2.1.0",
     "yup": "^0.26.6"
