Revert "Remove antd"

--- a/.babelrc
+++ b/.babelrc
@@ -5,8 +5,7 @@
       {
         "root": ["./"],
         "alias": {
-          "@app": "./",
-          "@front": "./src"
+          "@app": "./"
         }
       }
     ]
