--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "types": "tsc",
     "pretty": "prettier --write \"{,!(.next|out)/**/}*.{ts,tsx,js}\"",
     "test": "jest",
-    "circular": "madge --circular --extensions ts ./",
-    "storybook": "start-storybook -p 9001 -c .storybook"
+    "circular": "madge --circular --extensions ts ./"
   },
   "dependencies": {
     "@breadhead/form-saver": "^1.0.3",
@@ -32,7 +31,6 @@
     "final-form": "^4.10.0",
     "http-status-codes": "^1.3.0",
     "ignore-not-found-export-plugin": "^1.0.1",
-    "imagemin-svgo": "^7.0.0",
     "js-cookie": "^2.2.0",
     "less": "^3.8.1",
     "less-vars-to-js": "^1.3.0",
@@ -42,7 +40,6 @@
     "next": "^7.0.2",
     "next-compose-plugins": "^2.1.1",
     "next-css-unpluggable": "^2.1.8",
-    "next-optimized-images": "^2.3.3",
     "next-routes": "^1.4.2",
     "normalize.css": "^8.0.0",
     "object-hash": "^1.3.1",
@@ -62,24 +59,17 @@
     "redux-windowsize": "^1.3.1",
     "reselect": "^4.0.0",
     "store2": "^2.7.1",
-    "svg-sprite-loader": "^4.1.3",
     "tsoption": "^0.7.0",
     "utility-types": "^2.1.0",
     "yup": "^0.26.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@commitlint/cli": "^7.3.2",
     "@commitlint/config-conventional": "^7.3.1",
     "@solid-soda/tslint-config": "^2.5.3",
-    "@storybook/addon-actions": "^4.1.11",
-    "@storybook/addon-console": "^1.1.0",
-    "@storybook/addon-links": "^4.1.11",
-    "@storybook/addon-viewport": "^4.1.11",
-    "@storybook/react": "^4.1.11",
     "@types/classnames": "^2.2.6",
     "@types/enzyme": "^3.1.14",
     "@types/jest": "^23.3.4",
@@ -94,13 +84,9 @@
     "@types/react-transition-group": "^2.0.14",
     "@types/recompose": "^0.30.0",
     "@types/redux-thunk": "^2.1.0",
-    "@types/storybook__addon-actions": "^3.4.1",
-    "@types/storybook__react": "^4.0.0",
     "@types/yup": "^0.26.0",
-    "awesome-typescript-loader": "^5.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.5",
     "babel-plugin-module-resolver": "^3.1.1",
     "cz-conventional-changelog": "^2.1.0",
     "enzyme": "^3.7.0",
@@ -118,7 +104,6 @@
     "postcss-normalize": "^7.0.1",
     "postcss-preset-env": "^6.3.0",
     "prettier": "^1.15.3",
-    "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "stylelint": "^9.7.1",
     "stylelint-config-recess-order": "^2.0.0",
     "stylelint-config-recommended": "^2.1.0",
