--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@breadhead/form-saver": "^1.0.3",
     "@breadhead/thunk-error": "^1.0.3",
+    "@breadhead/validate-phone": "^1.0.0",
     "@breadhead/with-scroll-lock": "^1.0.0",
     "@types/object-hash": "^1.2.0",
     "@zeit/next-less": "^1.0.1",
