--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "^7.0.2",
     "next-compose-plugins": "^2.1.1",
     "next-css-unpluggable": "^2.1.8",
+    "next-optimized-images": "^2.3.3",
     "next-routes": "^1.4.2",
     "normalize.css": "^8.0.0",
     "object-hash": "^1.3.1",
@@ -60,6 +61,7 @@
     "redux-windowsize": "^1.3.1",
     "reselect": "^4.0.0",
     "store2": "^2.7.1",
+    "svg-sprite-loader": "^4.1.3",
     "tsoption": "^0.7.0",
     "utility-types": "^2.1.0",
     "yup": "^0.26.6"
