--- a/package.json
+++ b/package.json
@@ -122,7 +122,8 @@
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-order": "^1.0.0",
     "tslint": "^5.11.0",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "webpack": "^4.29.1"
   },
   "config": {
     "commitizen": {
