--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.2",
+    "redux-react-hook": "^3.0.4",
     "redux-symbiote": "^2.6.0",
     "redux-thunk": "^2.1.0",
     "redux-windowsize": "^1.3.1",
