--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "oncohelp-web",
   "version": "1.0.0",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "node --inspect --inspect-brk server.js",
     "build": "next build",
     "start": "pm2 restart ecosystem.config.js",
     "lint": "yarn lint:code && yarn lint:style",
