--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
     "dayjs": "^1.8.0",
+    "escape-string-regexp": "^1.0.5",
     "express": "^4.16.4",
     "final-form": "^4.10.0",
     "http-status-codes": "^1.3.0",
@@ -83,6 +84,7 @@
     "@storybook/react": "^4.1.11",
     "@types/classnames": "^2.2.6",
     "@types/enzyme": "^3.1.14",
+    "@types/escape-string-regexp": "^1.0.0",
     "@types/jest": "^23.3.4",
     "@types/js-cookie": "^2.2.0",
     "@types/lodash": "^4.14.117",
