--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
+    "date-fns": "^1.30.1",
     "dayjs": "^1.8.0",
     "escape-string-regexp": "^1.0.5",
     "express": "^4.16.4",
@@ -36,6 +37,7 @@
     "http-status-codes": "^1.3.0",
     "ignore-not-found-export-plugin": "^1.0.1",
     "js-cookie": "^2.2.0",
+    "js-file-download": "^0.4.5",
     "less": "^3.8.1",
     "less-vars-to-js": "^1.3.0",
     "lodash": "^4.17.11",
