--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "normalize.css": "^8.0.0",
     "object-hash": "^1.3.1",
     "plural-ru": "^2.0.1",
+    "query-string": "^6.4.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-final-form": "^3.6.7",
