--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next-css-unpluggable": "^2.1.8",
     "next-optimized-images": "^2.3.3",
     "next-routes": "^1.4.2",
+    "next-transpile-modules": "1",
     "normalize.css": "^8.0.0",
     "object-hash": "^1.3.1",
     "plural-ru": "^2.0.1",
