--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-final-form": "^3.6.7",
+    "react-highlight-words": "^0.16.0",
     "react-modal": "^3.6.1",
     "react-redux": "^5.1.0",
     "react-transition-group": "^2.5.1",
@@ -90,6 +91,7 @@
     "@types/nanoid": "^1.2.0",
     "@types/next": "^7.0.1",
     "@types/react": "^16.4.16",
+    "@types/react-highlight-words": "^0.16.0",
     "@types/react-modal": "^3.6.0",
     "@types/react-redux": "^6.0.9",
     "@types/react-scroll": "^1.5.4",
