--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-final-form": "^3.6.7",
+    "react-google-tag-manager": "^2.2.1",
     "react-highlight-words": "^0.16.0",
     "react-modal": "^3.6.1",
     "react-redux": "^5.1.0",
