--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nanomerge": "^0.2.0",
     "next": "^7.0.2",
     "next-compose-plugins": "^2.1.1",
+    "next-cookies": "^1.1.3",
     "next-css-unpluggable": "^2.1.8",
     "next-optimized-images": "^2.3.3",
     "next-routes": "^1.4.2",
