--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "final-form": "^4.10.0",
     "http-status-codes": "^1.3.0",
     "ignore-not-found-export-plugin": "^1.0.1",
+    "intercom-next": "^1.1.8",
+    "intercom-react": "^1.0.0-alpha.6",
     "js-cookie": "^2.2.1",
     "js-file-download": "^0.4.5",
     "less": "^3.8.1",
@@ -52,11 +54,12 @@
     "object-hash": "^1.3.1",
     "plural-ru": "^2.0.1",
     "query-string": "^6.4.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.12",
+    "react-dom": "^16.12",
     "react-final-form": "^3.6.7",
     "react-google-tag-manager": "^2.2.1",
     "react-highlight-words": "^0.16.0",
+    "react-intercom": "^1.0.15",
     "react-modal": "^3.6.1",
     "react-redux": "^5.1.0",
     "react-transition-group": "^2.5.1",
