--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,7 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "jsx": "preserve",
-    "lib": [
-      "dom",
-      "es2017"
-    ],
+    "lib": ["dom", "es2017"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -20,30 +17,16 @@
     "strict": true,
     "target": "esnext",
     "paths": {
-      "@app/*": [
-        "*"
-      ],
-      "@front/*": [
-        "src/*"
-      ],
-      "redux-windowsize": [
-        "src/types/reduxWindowsize.d.ts"
-      ],
-      "plural-ru": [
-        "src/types/plural-ru.d.ts"
-      ]
+      "@app/*": ["*"],
+      "@front/*": ["src/*"],
+      "redux-windowsize": ["src/types/reduxWindowsize.d.ts"],
+      "plural-ru": ["src/types/plural-ru.d.ts"]
     },
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "isolatedModules": true
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ]
+  "exclude": ["node_modules"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
