--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,8 @@
     "isolatedModules": true
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "blueprint-templates"
   ],
   "include": [
     "next-env.d.ts",
