add share widget

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sanity/client": "^1.149.7",
     "@sanity/image-url": "^0.140.17",
     "@types/object-hash": "^1.2.0",
+    "@types/react-share": "^3.0.3",
     "@zeit/next-less": "^1.0.1",
     "antd": "^3.13.1",
     "args-parser": "^1.1.0",
@@ -69,6 +70,7 @@
     "react-intercom": "^1.0.15",
     "react-modal": "^3.6.1",
     "react-redux": "^7.2.0",
+    "react-share": "^4.1.0",
     "react-transition-group": "^2.5.1",
     "react-yandex-maps": "^3.0.2",
     "recharts": "^1.6.2",
